--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </header>
 
         <main role="main" class="inner cover">
-            <h1 class="cover-heading">Order your Boyfrient~~</h1>
+            <h1 class="cover-heading">Order your Boyfriend~~</h1>
             <p class="lead">
                 {{ !btnCheck?'商品庫存僅剩1件，要買要快，欲購從速(?':'商品庫存僅剩0件，請洽系統管理員(?'}}
             </p>
