--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
                     <a class="nav-link active" href="#">Home</a>
                     <a class="nav-link" href="#">Features</a>
                     <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#" onclick="alert('維護中，敬請期待')">Memory</a>
                 </nav>
             </div>
         </header>
 
         <main role="main" class="inner cover">
             <div v-if="!detectDate()">
-                <h1 class="cover-heading">Order your Boyfriend~~</h1>
+                <h1 class="cover-heading">Just take it easy，<br>I will always in your side.</h1>
                 <p class="lead">
                     {{ !btnCheck?'商品庫存僅剩1件，要買要快，欲購從速(?':'商品庫存僅剩0件，請洽系統管理員(?'}}
                 </p>
