--- a/index.html
+++ b/index.html
@@ -78,5 +78,17 @@
         </footer>
     </div>
 </body>
-    <script src="index.js"></script>
+<script src="index.js"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3N918WNBLZ"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-3N918WNBLZ');
+</script>
+
 </html>
