--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             <div v-if="!detectDate()">
                 <h1 class="cover-heading">Just take it easy，<br>I will always in your side.</h1>
                 <p class="lead">
-                    {{ !btnCheck?'商品庫存僅剩1件，要買要快，欲購從速(?':'商品庫存僅剩0件，請洽系統管理員(?'}}
+                    {{ !btnCheck?'補貨中，察看進度':'商品庫存僅剩0件，請洽系統管理員(?'}}
                 </p>
                 <p class="lead">
-                    <a href="#" class="btn btn-lg btn-secondary" v-model="btnCheck" @click="change()">{{ btnCheck?'沒存貨了QQ': '搶先訂購' }}</a>
+                    <a href="#" class="btn btn-lg btn-secondary" v-model="btnCheck" @click="change()">{{ btnCheck?'別急...XD': '搶先查看' }}</a>
                 </p>
             </div>
             <div v-else class="hidden" :class="{show:detectDate()}">
